# infiltrate

./: .gitignore  CLAUDE.md  CURRENT_STATE.txt  NOTEBOOK_INTEGRATION.md  PYTHON_SETUP.md  README.md  docker-compose.yml  eslint.config.mjs  index.html  kasita.db  nx.json  package-lock.json  package.json  tsconfig.base.json
.claude/context/: README.md  architecture.md  cursor-prompt.md  mvp-schema.md  setup-guide.md  tech-stack.md
.cursor/: .cursorrules  .cursorrules.angular  .cursorrules.nestjs  .cursorrules.nx  .cursorrules.python  .cursorrules.react
apps/api/: .env
apps/dashboard/: eslint.config.mjs  project.json  tailwind.config.js
apps/infiltrate/: README.md  project.json
apps/infiltrate-e2e/: playwright.config.ts  project.json
apps/ml-services/: Dockerfile  README.md  project.json  pyproject.toml
apps/ml-services/data/pandas_exercises/: courses.csv  enrollments.csv  students.csv
apps/ml-services/notebooks/: notebook.css  pandas_exercises.py
apps/ml-services/notebooks/__marimo__/session/: pandas_exercises.py.json
apps/patchbay/: README.md  project.json  pyproject.toml
apps/patchbay/adapters/: __init__.py  article_adapter.py  base_adapter.py  javascript_weekly_adapter.py  newsletter_adapter.py  pdf_adapter.py  rss_adapter.py
apps/patchbay/models/: __init__.py  raw_content.py  source_config.py
apps/patchbay/scripts/: __init__.py  ingest_archives.py
apps/patchbay/src/: __init__.py  api_client.py  ingest.py  main.py  normalizer.py  router.py
apps/patchbay/tests/: __init__.py
apps/synthesizer/: .env.example  README.md  project.json  pyproject.toml
apps/synthesizer/generators/: __init__.py  base_generator.py  knowledge_unit_generator.py
apps/synthesizer/models/: __init__.py  cluster.py  processed_content.py  synthesis_result.py
apps/synthesizer/processors/: __init__.py  clustering.py  embeddings.py
apps/synthesizer/src/: __init__.py  api_client.py  main.py  orchestrator.py
apps/synthesizer/tests/: __init__.py
data/: .gitignore
guides/: architecture-diagram.md  bullmq-pipeline-plan.md  classroom-admin-plan.md  classroom-implementation-plan.md  completion-assessment.md  cursor-rules-deviations.md  demo-checklist.md  demo-implementation-plan.md  file-structure.txt  implementation-plan.md  kasita-mvp-user-stories.md  navigation-ux-options.md  tech-stack.md
guides/archive/: demo-checklist.md  gymnasium-implementation-plan.md  roles-implementation.md
guides/reference/: file-structure.txt  react-in-angular-integration.md
guides/setup/: mvp-setup-commands.md  nx-generate-commands.md
libs/common-models/: package.json  project.json  (+1 more)
libs/python-shared/: project.json  pyproject.toml
libs/python-shared/src/python_shared/: __init__.py  file_io.py  logging_config.py  utils.py
libs/python-shared/tests/: __init__.py
metro-maps/: Advancedonia.jsx  Basicburgh.jsx  BasicburghSerpentine.jsx  Intermetropolis.jsx  KasitaTransitSystem.jsx
scripts/: README.md  generate-architecture-diagram.sh  generate-file-structure.sh
tools/: CREATE_GENERATOR_GUIDE.md  UPDATE_DTO_UTILS_PROMPT.md
(+824 files in other folders)
