[project]
name = "ml-services"
version = "0.1.0"
description = "Kasita ML services for notebook-based learning exercises"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "marimo>=0.7.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "notebooks"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "watchdog>=3.0.0",
]

[tool.marimo.display]
custom_css = ["notebooks/notebook.css"]

[tool.uv.sources]
python-shared = { path = "../../libs/python-shared", editable = true }
