[project]
name = "patchbay"
version = "0.1.0"
description = "Kasita content ingestion and routing system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.10",
    "trafilatura>=1.6.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "python-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "adapters", "models"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]

[tool.uv.sources]
python-shared = { path = "../../libs/python-shared", editable = true }

